# cobaya

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  DEVEL.rst  Dockerfile  LICENCE.txt  README.rst  TODO.md  pyproject.toml  setup.py  test.py  test_custom_tags.yaml  tests-environment.yml
.github/workflows/: build_docs_markdown.yml  tests.yml
chains/: gaussian.input.yaml  gaussian.updated.yaml
cobaya/: __init__.py  __main__.py  _internal_classes.py  bib.py  citation.py  cobaya_input.py  cobaya_typing.py  cobaya_yaml.py  collection.py  component.py  containers.py  conventions.py  doc.py  functions.py  input.py  input_processing.py  install.py  likelihood.py  log.py  model.py  mpi.py  output.py  package.py  parameterization.py  parametrisation.py  parametrization.py  post.py  prior.py  run.py  sampler.py  test_tools.py  theory.py  tools.py  typing.py  typing_conventions.py  yaml.py  yaml_custom.py  yaml_helpers.py
cobaya/cosmo_input/: __init__.py  autoselect_covmat.py  convert_cosmomc.py  create_input.py  gui.py  input_database.py
cobaya/grid_tools/: __init__.py  batchjob.py  batchjob_args.py  conventions.py  delete_jobs.py  gridconfig.py  gridconfig_cosmomc.py  gridmanage.py  gridrun.py  gridtables.py  jobqueue.py  runMPI.py  runbatch.py  running_jobs.py
cobaya/grid_tools/script_templates/: job_script_KNL  job_script_NERSC  job_script_SLURM  job_script_UGE
cobaya/likelihoods/H0/: freedman2020.bibtex  freedman2020.py  freedman2020.yaml  riess2018a.bibtex  riess2018a.py  riess2018a.yaml  riess2018b.bibtex  riess2018b.py  riess2018b.yaml  riess201903.bibtex  riess201903.py  riess201903.yaml  riess2020.bibtex  riess2020.py  riess2020.yaml  riess2020Mb.py  riess2020Mb.yaml
cobaya/likelihoods/H0_riess2018a/: H0_riess2018a.bibtex  H0_riess2018a.yaml  __init__.py
cobaya/likelihoods/H0_riess2018b/: H0_riess2018b.yaml  __init__.py
cobaya/likelihoods/H0_riess201903/: H0_riess201903.bibtex  H0_riess201903.yaml  __init__.py
cobaya/likelihoods/SO/: __init__.py
cobaya/likelihoods/_H0_prototype/: _H0_prototype.py  __init__.py
cobaya/likelihoods/_bao_prototype/: __init__.py  _bao_prototype.py
cobaya/likelihoods/_base_classes/: H0_prototype.py  _DataSetLikelihood.py  _H0_prototype.py  _InstallableLikelihood.py  __init__.py  _bao_prototype.py  _cmblikes.py  _cmblikes_prototype.py  _des_prototype.py  _planck_2018_CamSpec_python.py  _planck_2020_CamSpec_python.py  _planck_clik_prototype.py  _planck_pliklite_prototype.py  _pliklite_prototype.py  _sn_prototype.py  bao.py  bao_prototype.py  cmblikes.py  des.py  des_prototype.py  planck2015.bibtex  planck2018.bibtex  planck_2018_CamSpec_python.py  planck_clik.py  planck_clik_prototype.py  planck_pliklite.py  planck_pliklite_prototype.py  pliklite_prototype.py  sn.py  sn_prototype.py
cobaya/likelihoods/_cmblikes_prototype/: __init__.py  _cmblikes_prototype.py
cobaya/likelihoods/_des_prototype/: __init__.py  _des_prototype.py
cobaya/likelihoods/_hst_prototype/: __init__.py  _hst_prototype.py
cobaya/likelihoods/_planck_calibration_base/: __init__.py  _planck_calibration_base.yaml
cobaya/likelihoods/_planck_clik_prototype/: __init__.py  _planck_clik_prototype.py
cobaya/likelihoods/_pliklite_prototype/: __init__.py  _pliklite_prototype.py
cobaya/likelihoods/_sn_prototype/: __init__.py  _sn_prototype.py
cobaya/likelihoods/_test/: __init__.py  _test.py  _test.yaml  defaults.yaml
cobaya/likelihoods/bao/: DESI_BAO_y1.bibtex  DESI_BAO_y1.py  DESI_BAO_y1.yaml  desi_2024_bao.bibtex  desi_2024_bao_all.py  desi_2024_bao_all.yaml  desi_2024_bao_bgs_z1.py  desi_2024_bao_bgs_z1.yaml  desi_2024_bao_elg_z2.py  desi_2024_bao_elg_z2.yaml  desi_2024_bao_lrg_z1.py  desi_2024_bao_lrg_z1.yaml  desi_2024_bao_lrg_z2.py  desi_2024_bao_lrg_z2.yaml  desi_2024_bao_lrgpluselg_z1.py  desi_2024_bao_lrgpluselg_z1.yaml  desi_2024_bao_lya.py  desi_2024_bao_lya.yaml  desi_2024_bao_qso_z1.py  desi_2024_bao_qso_z1.yaml  desi_2024_eboss_bao_lya.py  generic.py  generic.yaml  (+38 more)
cobaya/planck_2018_CamSpecHM_TTTEEE/: __init__.py
cobaya/theories/: spline_lensing.py
docs/: Makefile  build_docs_to_markdown.py  cluster_amazon.rst  cobaya-example.ipynb  cobaya_docs_combined.md  component.rst  conf.py  cosmo_basic_runs.rst  cosmo_external_likelihood.rst  cosmo_external_likelihood_class.rst  cosmo_model.rst  cosmo_theories_likes.rst  cosmo_troubleshooting.rst  devel.rst  example.rst  example_advanced.rst  examples_planck.rst  grids.rst  index.rst  inheritance.rst  input.rst  installation.rst  installation_cosmo.rst  installation_ext.rst  intro.rst  likelihood_H0.rst  likelihood_bao.rst  likelihood_bk.rst  likelihood_des.rst  likelihood_external.rst  likelihood_external_list.rst  likelihood_gaussian.rst  likelihood_gaussian_mixture.rst  likelihood_hst.rst  likelihood_one.rst  likelihood_planck.rst  likelihood_sn.rst  likelihoods.rst  llm_context.rst  make.bat  (+19 more)
docs/_templates/: layout.html
docs/theme_customisation/: custom.css  page.html
tests/: SSIM_gaussian.yaml  _config.py  aux_prior_external.py  base_plikHM_TTTEEE_lowTEB.covmat  base_plikHM_TTTEEE_lowTEB_0.01theta.covmat  common.py  common_cosmo.py  common_external.py  common_sampler.py  conftest.py  cosmo_common.py  cosmo_install.py  cosmo_timing.ipynb  external_common.py  install_for_tests.py  job_script_SLURM  job_script_UGE  mpitest_mcmc_error.py  simple_grid.py  supernest_simple.yaml  test_camb.py  test_cosmo.sh  test_cosmo_H0.py  test_cosmo_Mb.py  test_cosmo_bao.py  test_cosmo_bicep_keck_2014.py  test_cosmo_bicep_keck_2015.py  test_cosmo_bicep_keck_2018.py  test_cosmo_camb.py  test_cosmo_camb_sigma_8_input.py  test_cosmo_classy.py  test_cosmo_des_1yr.py  test_cosmo_des_y1.py  test_cosmo_docs_basic.py  test_cosmo_docs_likelihood.py  test_cosmo_docs_model.py  test_cosmo_grid.yaml  test_cosmo_grid_2.yaml  test_cosmo_grid_final.yaml  test_cosmo_hst.py  (+35 more)
tests/chains/: gaussian_SSIM.1.txt  gaussian_SSIM.updated.yaml  gaussian_ref.1.txt  gaussian_ref.updated.yaml  gaussian_ssim.1.txt  gaussian_ssim.logZ  gaussian_ssim.updated.yaml
(+691 files in other folders)
